# instateam

./: .env  .gitignore  Dockerfile  Dockerfile.prod  Pipfile  README.md  docker-compose.yaml  fly.toml  manage.py  pyproject.toml
instateam/: asgi.py  settings.py  urls.py  wsgi.py
instawork/: apps.py
members/: admin.py  forms.py  models.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_remove_member_team_delete_team.py
members/templates/members/: create.html  edit.html  index.html
theme/templates/: base.html
